# Anime-Recommender-System

./: pyproject.toml
app/: app.py
config/: config.py
pipeline/: __init__.py  build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
