[project]
name = "anime-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "gitingest>=0.1.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.28",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]

[tool.setuptools.packages.find]
where = ["."]
# optional filters:
# include = ["pipeline*"]
# exclude = ["tests*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"